[gd_scene load_steps=11 format=3 uid="uid://ftkh155jwal2"]

[ext_resource type="Script" path="res://Scenes/MicroGamesHandler/Scripts/micro_games_handler.gd" id="1_bkbri"]
[ext_resource type="Texture2D" uid="uid://f53rs58kvlfq" path="res://Scenes/MicroGamesHandler/Assets/2D/Cloud2.png" id="2_g468g"]
[ext_resource type="Texture2D" uid="uid://b2rsyo5v88vf2" path="res://Scenes/MicroGamesHandler/Assets/2D/EndBomb.png" id="2_hv17n"]
[ext_resource type="Texture2D" uid="uid://datfnkmlcyc6v" path="res://Scenes/MicroGamesHandler/Assets/2D/Bomb1.png" id="3_sa4kw"]
[ext_resource type="AudioStream" uid="uid://llqshaenjyfn" path="res://Scenes/MicroGamesHandler/Assets/Audio/BombSplode.ogg" id="3_yxg65"]
[ext_resource type="AudioStream" uid="uid://cjr7t5vifoyu" path="res://Scenes/MicroGamesHandler/Assets/Audio/BombBump.ogg" id="4_tk4ib"]
[ext_resource type="Material" uid="uid://dse046wvbee6j" path="res://Scenes/MicroGamesHandler/Assets/Shaders/ShaderMaterials/TVStaticShader.tres" id="4_yk03m"]

[sub_resource type="Animation" id="Animation_8cyig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_650cc"]
resource_name = "flash_ready"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m847m"]
_data = {
"RESET": SubResource("Animation_8cyig"),
"flash_ready": SubResource("Animation_650cc")
}

[node name="MicroGamesHandler" type="Node2D"]
process_mode = 1
script = ExtResource("1_bkbri")
tv_shader = ExtResource("4_yk03m")
bomb_explode_texture = ExtResource("2_hv17n")
bomb_splode = ExtResource("3_yxg65")
microgame_playmode = "boss_queue"
boss_mcg_counter = 1

[node name="SubViewPortContainer" type="SubViewportContainer" parent="."]
process_mode = 1
texture_filter = 1
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SubViewPort" type="SubViewport" parent="SubViewPortContainer"]
handle_input_locally = false
snap_2d_vertices_to_pixel = true
physics_object_picking = true
size = Vector2i(240, 160)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -108.0
offset_top = -72.0
offset_right = 108.0
offset_bottom = 72.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(120, 80)
mouse_filter = 1

[node name="WinLossRect" type="ColorRect" parent="."]
process_mode = 3
visible = false
anchors_preset = -1
anchor_left = 0.465
anchor_right = 0.465
offset_left = -40.0
offset_top = -15.0
offset_right = 40.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="WinLabel" type="Label" parent="WinLossRect"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LossLabel" type="Label" parent="WinLossRect"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "You Lose!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PromptLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "READY???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PromptLabel"]
process_mode = 1
libraries = {
"": SubResource("AnimationLibrary_m847m")
}

[node name="DEBUGHearts" type="Label" parent="PromptLabel"]
layout_mode = 0
offset_left = 1.5
offset_top = 46.5
offset_right = 41.5
offset_bottom = 66.5
text = "
"

[node name="DEBUGMCGCount" type="Label" parent="PromptLabel"]
layout_mode = 0
offset_left = 66.5
offset_top = 46.5
offset_right = 106.5
offset_bottom = 66.5
text = "0"

[node name="BombTimer" type="Node2D" parent="."]
process_mode = 1
visible = false

[node name="Sky" type="ColorRect" parent="BombTimer"]
clip_contents = true
offset_left = -120.0
offset_top = -80.0
offset_right = -108.0
offset_bottom = 80.0
color = Color(0, 1, 1, 1)

[node name="Ground" type="ColorRect" parent="BombTimer/Sky"]
layout_mode = 0
offset_top = 148.0
offset_right = 12.0
offset_bottom = 160.0
color = Color(0.984314, 0.701961, 0.592157, 1)

[node name="Cloud1" type="Sprite2D" parent="BombTimer/Sky"]
position = Vector2(6, 11)
texture = ExtResource("2_g468g")

[node name="Bomb" type="Sprite2D" parent="BombTimer/Sky"]
position = Vector2(6, 10)
texture = ExtResource("3_sa4kw")

[node name="BombSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tk4ib")
bus = &"SFXBus"

[node name="Timer" type="Timer" parent="."]
